# email-agent

./: .env.example  .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  email_agent.py  models.py  prompts.py
backend/app/api/: agent.py  emails.py
backend/app/email/: __init__.py  imap_client.py  models.py  smtp_client.py
docs/: BACKEND_USAGE.md  FRONTEND_ARCHITECTURE.md  INSTALLATION.md
frontend/: electron.vite.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/main/: index.ts
frontend/src/preload/: index.ts
frontend/src/renderer/: App.tsx  index.html
frontend/src/renderer/api/: agent.ts  client.ts  emails.ts
frontend/src/renderer/components/Inbox/: InboxView.tsx
frontend/src/renderer/components/Landing/: ConfigurationWizard.tsx  LandingPage.tsx  index.ts
frontend/src/renderer/components/Notification/: EmailSummary.tsx  NotificationPopup.tsx  index.ts
frontend/src/renderer/components/Response/: ResponseEditor.tsx  ResponseViewer.tsx  index.ts
frontend/src/renderer/components/Settings/: SettingsPanel.tsx
frontend/src/renderer/components/ui/: Button.tsx  Card.tsx  Input.tsx  Select.tsx  (+2 more)
frontend/src/renderer/hooks/: index.ts  useEmailMonitor.ts  useI18n.ts  useTheme.ts
frontend/src/renderer/i18n/: config.ts  en.json  es.json
frontend/src/renderer/store/: emailStore.ts  notificationStore.ts  settingsStore.ts
frontend/src/renderer/styles/: animations.css  index.css  themes.css
frontend/src/shared/: types.ts
scripts/: dev.sh  setup.sh
